fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,12 @@ body {
 	margin:0;
     padding:0;
 }
+* {
+        margin: 0;
+        padding: 0;
+        border: 0;
+        outline: 0;
+        font-size: 100%;
+        vertical-align: baseline;
+        background: transparent;
+    }
